# torchit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
tests/: test_training.py  test_visualizations.py
torchit/: training.py  visualizations.py
