[tool.poetry]
name = "torchit"
version = "0.1.0"
description = "Package supplying helper functions for basic pytorch usage"
authors = ["Elias Tavarez <etav@umich.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
